--- a/pin_board/app/views/layouts/application.html.haml
+++ b/pin_board/app/views/layouts/application.html.haml
@@ -1,5 +1,5 @@
 !!! 5
-%htlm
+%html
 %head
 	%title Pin Board
 	= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
