--- a/pin_board/app/views/pins/edit.html.haml
+++ b/pin_board/app/views/pins/edit.html.haml
@@ -1,5 +1,7 @@
-%h1 edit pin
+.col-md-6.col-md-offset-3
 
-= render 'form'
+	%h1 edit pin
 
-= link_to "Cancel" , pin_path
+	= render 'form'
+
+	= link_to "Cancel" , pin_path
